<resources>
    <string name="app_name">Feast Fast</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fullNamePlaceHolder">Full Name</string>
    <string name="phoneNumberPlaceHolder">Phone Number</string>
    <string name="emailPlaceHolder">Email Address</string>
    <string name="passwordPlaceHolder">Password</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="rememberMe">Remember Me</string>
    <string name="terms">By using Feast Fast you agree on our terms and privacy policy</string>
    <string name="addPicture">Add profile picture !</string>

    <string name="deliver">Deliver to</string>
    <string name="explore">Explore</string>
    <string name="allRestaurants">All restaurants</string>
    <string name="YourCartFrom">Your Cart From </string>
    <string name="details">Details</string>
    <string name="include">Ingredients include:  </string>
    <string name="chooseSize">Choose size</string>
    <string name="toppings">Add toppings</string>
    <string name="EmptyCart"> Empty Cart </string>
    <string name="addMoreItems">Add More Items</string>
    <string name="viewCart">View cart</string>
<<<<<<< HEAD
    <string name="categories">Categories</string>
    <string name="nearYou">Near you</string>
    <string name="freeDelivery">Free delivery</string>
    <string name="topRated">Top rated</string>
    <string name="topPastry">Top pastry and bakery</string>
    <string name="checkout">Checkout</string>
    <string name="choose">choose</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="accurateAddressText">Please provide your address as accurately as possible so that your order reaches you in no time</string>
    <string name="enterDeliveryAddress">Enter you delivery address</string>
    <string name="alternatively">Or Alternatively</string>
    <string name="useLocation">Use your current location</string>
    <string name="searchHint">Search for a store</string>
    <string name="your">Your</string>
    <string name="orders">Orders</string>
=======

>>>>>>> profile_fav

    <string name="BillText">Bill</string>
    <string name="foodTotal">Food Total</string>
    <string name="deliveryFeeText">Delivery Fee</string>
    <string name="total">Total</string>


    <string name="personalInfo">Personnal Information</string>
    <string name="favoriteResttaurants">Favorite Restaurants</string>
    <string name="language">Languages</string>
    <string name="customerSupport">Costumer Support</string>
    <string name="aboutApp">About App</string>
    <string name="logout">LogOut</string>
    <string name="saveChanges">Save Changes</string>
    <string name="changeProfile">Change Profile</string>


</resources>